##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = hememap
version = 0.0.1-dev
long_description = file: README.rst

[options]
install_requires =
    bel_repository>=0.0.8

# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true

# Where is my code
packages = hememap

[options.entry_points]
console_scripts =
    hememap = hememap:main
