##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = hemekg
version = 0.0.1-dev
long_description = file: README.rst

[options]
install_requires =
    pybel>=0.15.0

# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true

# Where is my code
packages = hemekg

[options.entry_points]
console_scripts =
    hemekg = hemekg:main
