##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = hemekg
version = 0.0.2-dev
description = Mechanistic knowledge about heme and hemolytic disorders in Biological Expression Language with PyBEL
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/hemekg/hemekg
download_url = https://github.com/hemekg/hemekg/releases
project_urls =
    Bug Tracker = https://github.com/hemekg/hemekg/issues
    Source Code = https://github.com/hemekg/hemekg

# Author information
author = Farah Humayun and Daniel Domingo-Fernández
author_email = daniel.domingo.fernandez@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

[options]
install_requires =
    pybel>=0.15.0

# Random options
python_requires = >=3.6
zip-safe = false
include-package-data = true

# Where is my code
packages = hemekg

[options.entry_points]
console_scripts =
    hemekg = hemekg:main
